--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="azulClaro">
     <ion-title>
       Ionic Blank
     </ion-title>
@@ -7,8 +7,7 @@
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ipsum ex voluptatibus beatae voluptates quasi omnis quae nulla ratione nisi quas id, cupiditate vero iure molestias tenetur incidunt unde eos!
   </p>
 </ion-content>
