--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="azulClaro">
     <ion-title>
-      Ionic Blank
+      QR - App
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -10,4 +10,8 @@
   <p>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ipsum ex voluptatibus beatae voluptates quasi omnis quae nulla ratione nisi quas id, cupiditate vero iure molestias tenetur incidunt unde eos!
   </p>
+
+  <button ion-button color="azulClaro" block (click)="scan()">
+    realizar scaneo
+  </button>
 </ion-content>
