--- a/src/pages/guardados/guardados.html
+++ b/src/pages/guardados/guardados.html
@@ -6,7 +6,14 @@
 
 </ion-header>
 
-
+<!--creamos una lista con botones para que sea posible no solo ver una lista si no acceder a ella cuando queramos-->
 <ion-content padding>
-
+  <ion-list>
+    <button ion-item *ngFor="let data of historial; let i = index" (click)="abrirScan(i)">
+      {{data.info}}
+      <p>
+        {{data.tipo}}
+      </p>
+    </button>
+  </ion-list>
 </ion-content>
